<resources>
    <string name="app_name">Garden tracker</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_garden_maintenance">GardenMaintenance</string>
    <string name="title_activity_garden_maintenance_form">GardenMaintenanceForm</string>
    <string name="title_activity_garden_maintenance_form_detail">GardenMaintenanceFormDetail</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="start_date">Start date</string>
    <string name="repeat_every">Repeat every</string>
    <string name="days">days.</string>
    <string name="time">Time</string>
    <string name="city">City</string>


    <string name="done">DONE</string>
    <string name="back">BACK</string>
    <string name="save">SAVE</string>
    <string name="garden_maintenance">GARDEN MAINTENANCE</string>
    <string name="change">CHANGE</string>
    <string name="photo_diary">PHOTO DIARY</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="weather">WEATHER</string>
    <string name="search">SEARCH</string>

    <string name="camera_toast">"Something went wrong with your camera."</string>

    <string name="position">position</string>
    <string name="delete_maintenance_question">Are you sure you want to delete this maintenance?</string>
    <string name="delete_photo_question">Are you sure you want to delete this photo?</string>
    <string name="done_maintenance_question">Are you sure you have done this maintenance?</string>
    <string name="warning">Warning</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="fill_form_warning_toast">You have to fill out all fields.</string>
    <string name="fill_city_warning_toast">You have to fill out the city field.</string>
    <string name="title_activity_photo_diary_gallery">Photo Diary Gallery</string>
    <string name="city_not_found">City was not found. Please choose another city.</string>

    <string name="jpg">JPG_%d</string>
    <string name="days_left">%d days left</string>
    <string name="title_activity_photo_diary_detail">Photo Diary Detail</string>
    <string name="title_activity_weather">Weather</string>

    <string name="weather_main" formatted="false">%d °C, %s</string>
    <string name="city_country" formatted="false">%s, %s</string>
    <string name="max_temp">Max. temperature: %d °C</string>
    <string name="min_temp">Min. temperature: %d °C</string>
    <string name="wind_speed_direction" formatted="false">Wind: %d km/h, %s</string>
    <string name="humidity">Humidity: %d %%</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">SETTINGS</string>
    <string name="notification_time">Notification time</string>
    <string name="title_activity_search_city">Search City</string>



    <string name="updated">Updated!</string>
    <string name="saved">Saved!</string>
    <string name="invalid_loader">Invalid loader ID %d</string>
    <plurals name="notification_text_tasks">
        <item quantity="one">You have %1$d task to do today.</item>
        <item quantity="other">You have %1$d tasks to do today.</item>
    </plurals>
    <string name="work_for_today">Work for today</string>
    <string name="connection_error">Connection error.</string>
    <string name="searching">Searching ...</string>

</resources>